--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Jai's Portfolio Website",
   "scripts": {
     "dev": "next dev -H 0.0.0.0",
-    "build":"next build",
+    "build": "next build",
     "prettier": "prettier-write .",
     "lint": "next lint"
   },
@@ -15,10 +15,13 @@
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@splinetool/react-spline": "^2.2.1",
+    "@splinetool/runtime": "^0.9.103",
     "framer-motion": "^6.5.1",
     "next": "^12.2.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "eslint": "^8.20.0",
