--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Jai Patel",
   "license": "MIT",
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.9",
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
