--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-text-rotator": "^1.2.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
