--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,16 @@
           "varsIgnorePattern": "^_"
         }
       ],
-      "react/display-name": 0
+      "react/display-name": 0,
+
+      "import/no-anonymous-default-export": ["error", {
+        "allowArray": true,
+        "allowArrowFunction": true,
+        "allowAnonymousClass": true,
+        "allowAnonymousFunction": true,
+        "allowCallExpression": true, // The true value here is for backward compatibility
+        "allowLiteral": true,
+        "allowObject": true
+      }]
     }
   }
